<resources>
    <string name="app_name">Mamontov IS-63</string>
    <string name="header">Lab2</string>

    <string name="pricies">Price range</string>
    <string name="pricies1">0-10$</string>
    <string name="pricies2">10-50$</string>
    <string name="pricies3">50-100$</string>

    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer1">Skeppshult</string>
    <string name="manufacturer2">Bohemia</string>
    <string name="manufacturer3">Japonica</string>

    <string name="button">Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
