<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/header"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/dishlist1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/price_range_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/pricies"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/price_range1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pricies1" />

        <CheckBox
            android:id="@+id/price_range2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pricies2" />

        <CheckBox
            android:id="@+id/price_range3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pricies3" />

        <TextView
            android:id="@+id/manufacturer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/manufacturer"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/manufacturer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer1" />

        <CheckBox
            android:id="@+id/manufacturer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer2" />

        <CheckBox
            android:id="@+id/manufacturer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer3" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button" />

    </LinearLayout>

</FrameLayout>